@@ -1,8 +1,6 @@
 package dev.lpa;
-
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Comparator;
 import java.util.List;
 
 public class MoreList {
@@ -10,64 +8,51 @@ public class MoreList {
         String[] items = {"apples", "bananas", "milk", "eggs"};
 
         List<String> list = List.of(items);
-        System.out.println(list);
+        //System.out.println(list);
 
         ArrayList<String> groceries = new ArrayList<>(list);
         groceries.add("yogurt");
-        System.out.println(groceries);
+        //System.out.println(groceries);
 
-        ArrayList<String> nextList = new ArrayList<>(
-                List.of("pickles", "mustard", "cheese")
-        );
+        ArrayList<String> nextArrayList = new ArrayList<>(List.of("pickles", "mustard", "cheese"));
 
-        System.out.println(nextList);
+        // We can get the element in an ArrayList using .get() method
+        //System.out.println("Third item = " + nextArrayList.get(2));
 
-        groceries.addAll(nextList);
-
-        System.out.println(groceries);
-
-        System.out.println("Third element = " + groceries.get(2));
-
-        if (groceries.contains("mustard")){
-            System.out.println("List contains mustard");
+        // As a boolean return, we can check of an element does exist
+        if (nextArrayList.contains("mustard")) {
+            //System.out.println("nextArrayList contains mustard");
         }
 
-        groceries.add("yogurt");
-        System.out.println("first = " + groceries.indexOf("yogurt"));
-        System.out.println("last = " + groceries.lastIndexOf("yogurt"));
+        // This will add an  item at the end of the ArrayList
+        nextArrayList.add("yogurt");
 
+        // indexOf("yogurt") will return the index of the element
+        //System.out.println("indexOf('yogurt') = " + nextArrayList.indexOf("yogurt"));
 
-        System.out.println(groceries);
+        nextArrayList.add("yogurt");
+        // return the last index on an element
+        //System.out.println("lastIndexOf('yogurt') = " + nextArrayList.lastIndexOf("yogurt"));
+
+        // We can remove any element, either by its index or value
         groceries.remove(1);
-        System.out.println(groceries);
-
-        System.out.println(groceries);
         groceries.remove("yogurt");
-
-        System.out.println(groceries);
-        groceries.removeAll(List.of("apples", "eggs"));
-        groceries.retainAll(List.of("apples", "milk", "mustard", "cheese"));
-
         System.out.println(groceries);
 
+        // Remove a list of element.
+        groceries.removeAll(List.of("mustard", "apple"));
+
+        // Retain - Removes everything and retain the list elements passed in
+        groceries.retainAll(List.of("apple", "orange"));
+
+        // remove everything from the list
         groceries.clear();
         System.out.println(groceries);
         System.out.println("isEmpty = " + groceries.isEmpty());
 
-
-        groceries.addAll(List.of("Apples", "milk", "mustard", "cheese"));
+        // There are two ways to add elements, either by using List.of() static class or Arrays.asList()
+        groceries.addAll(List.of("apple", "mild", "mustard"));
         groceries.addAll(Arrays.asList("eggs", "pickles", "mustard", "ham"));
-        System.out.println(groceries);
-
-        groceries.sort(Comparator.naturalOrder());
-        System.out.println(groceries);
-
-        groceries.sort(Comparator.reverseOrder());
-        System.out.println(groceries);
-
-        var groceryArray = groceries.toArray(new String[groceries.size()]);
-        System.out.println(Arrays.toString(groceryArray));
-
 
     }
 }
